--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fideloper/proxy": "^4.0",
         "hieu-le/active": "~3.5",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.5",
